# rygex

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  add-version.sh  bash-rematch.sh  benchmarks.md  build_standalone.sh  irygex.py  make_big_file.py  myfile  new_test.py  pearl_counter.pl  performance_results.txt  performance_script.py  perl_counter.pl  pygrep.py  pygrep101.py  pyproject.toml  requirements.txt  rg14_python312_benchmark.md  rygex_ext.pyi  test-build.sh  test-script.py  test-script.sh  testfile  ufw.test  ufw.test1.tar.xz
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml
archive/: README.md.bk
pygrep/: cli.py
rygex/: args.py  cli.py  converters.py  formatting.py  legacy.py  models.py  parallel.py  printer.py  python_regex.py  utils.py  validation.py
src/: lib.rs  regex.pyi
