[package]
name = "rygex"
version = "0.1.8"
edition = "2024"

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
regex = "1.7"
rayon = "1.6"
memmap2 = "0.5"
memchr = "2.5"

[lib]
name = "rygex_ext"  # This will be the module name in Python.
path = "src/lib.rs"
crate-type = ["cdylib"]
