[package]
name = "rygex"
version = "0.1.9"
edition = "2024"

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
regex = "1.11.1"
rayon = "1.10.0"
memmap2 = "0.5"
memchr = "2.5"

[lib]
name = "rygex_ext"  # This will be the module name in Python.
path = "src/lib.rs"
crate-type = ["cdylib"]
