[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[project]
name = "rygex"
version = "0.1.12"
description = "A fast grep tool using a Rust-powered regex extension"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "JP", email = "jonnypeace@outlook.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]

# The following [tool.maturin] section tells maturin how to build the extension.
[tool.maturin]
bindings = "pyo3"
# Include the Python package folder in the built wheel:
include = ["rygex/**/*", "src/**/*", "rygex_ext.pyi"]


[project.scripts]
# This defines a console script entry point. When installed, running "rygex" will invoke the main() function
# from the module rygex.cli.
rygex = "rygex.cli:main"

[project.urls]
"Homepage" = "https://github.com/jonnypeace/rygex"
